...
                                  color: Colors.deepPurple,
                                  spreadRadius: 6,
                                  blurRadius: 3)
                            ])),
                    SizedBox(width: screenWidth * 0.08),
                    Container(
                        key: Key("active/suspend button"),
                        height: screenHeight * 0.07,
                        width: screenWidth * 0.4,
                        child: MaterialButton(
                            color: Colors.grey,
                            onPressed: () async {
                              if (await NetworkCheck().check()) {
...

class InfoCarTest {
  String activeString(String active) {
    if (active == 't') {
      return 'Active';
    } else {
      return 'Inactive';
    }
  }

  String positionString(String position) {
    String newPos = '';
    List<String> splitted = position.split(',');
...
