...
                          style: TextStyle(
                              fontWeight: FontWeight.bold,
                              color: Colors.redAccent,
                              fontSize: screenText * 22))),
                  SizedBox(height: screenHeight * 0.05),
                  PriceButton(
                      key: Key("price button"),
                      screenHeight: screenHeight,
                      screenWidth: screenWidth,
                      screenText: screenText,
                      value: counter.toString()),
                  SizedBox(height: screenHeight * 0.03),
                  Row(mainAxisAlignment: MainAxisAlignment.center, children: [
...
                              counter = Operation().decrementCounter(counter);
                            });
                          }
                        }),
                    SizedBox(width: screenWidth * 0.2),
                    TextButton(
                        key: Key("add button"),
                        style: TextButton.styleFrom(
                            primary: Colors.white,
                            backgroundColor: Colors.redAccent,
                            padding: EdgeInsets.all(screenWidth * 0.04)),
                        child: Icon(Icons.add, size: screenText * 25),
                        onPressed: () {
...
