...
                    fontSize: PosChange().textChange(screenText),
                    color: Colors.white,
                    fontWeight: FontWeight.bold))));

    //price button field
    final priceButton = Container(
        key: Key("Price button"),
        width: width(),
        height: PosChange().heightChange(screenHeight),
        margin: EdgeInsets.only(
            top: screenHeight * 0.01,
            left: screenWidth * 0.04,
            right: screenWidth * 0.04,
...
                    Text('Change!',
                        style: TextStyle(
                            fontSize: screenText * 20,
                            color: Colors.white,
                            fontWeight: FontWeight.bold)),
                    IconButton(
                        key: Key("change button"),
                        onPressed: () async {
                          if (await NetworkCheck().check()) {
                            if (carModel.fuel == fuelString &&
                                carModel.model == modelString &&
                                carModel.position == positionString &&
                                carModel.price == priceString &&
...
