...
                    SizedBox(height: screenHeight * 0.1),
                    SizedBox(
                        height: screenHeight * 0.35,
                        child: Image.asset("assets/prcarlogo.png",
                            fit: BoxFit.contain)),
                    Container(
                        key: Key("Other reservation button tablet"),
                        height: screenHeight * 0.12,
                        width: screenWidth * 0.85,
                        decoration: BoxDecoration(
                            color: Colors.redAccent,
                            border: Border.all(width: 5.0, color: Colors.grey)),
                        child: (MaterialButton(
...
