...
        return screenText * 14;
      } else {
        return screenText * 25;
      }
    }

    //first name field
    final firstNameField = TextFormField(
        key: Key("first name field"),
        autofocus: false,
        style: TextStyle(fontSize: textSize()),
        controller: firstNameEditingController,
        keyboardType: TextInputType.name,
...
                screenHeight * 0.015, screenWidth * 0.02, screenHeight * 0.015),
            hintText: "First Name",
            hintStyle: TextStyle(fontSize: textSize()),
            border:
                OutlineInputBorder(borderRadius: BorderRadius.circular(10))));

    //second name field
    final secondNameField = TextFormField(
        key: Key("second name field"),
        autofocus: false,
        style: TextStyle(fontSize: textSize()),
        controller: secondNameEditingController,
        keyboardType: TextInputType.name,
...
                screenHeight * 0.015, screenWidth * 0.02, screenHeight * 0.015),
            hintText: "Second Name",
            hintStyle: TextStyle(fontSize: textSize()),
            border:
                OutlineInputBorder(borderRadius: BorderRadius.circular(10))));

    //email field
    final emailField = TextFormField(
        key: Key("email field"),
        autofocus: false,
        style: TextStyle(fontSize: textSize()),
        controller: emailEditingController,
        keyboardType: TextInputType.emailAddress,
...
                screenHeight * 0.015, screenWidth * 0.02, screenHeight * 0.015),
            hintText: "Email",
            hintStyle: TextStyle(fontSize: textSize()),
            border:
                OutlineInputBorder(borderRadius: BorderRadius.circular(10))));

    //password field
    final passwordField = TextFormField(
        key: Key("password field"),
        autofocus: false,
        style: TextStyle(fontSize: textSize()),
        controller: passwordEditingController,
        obscureText: true,
...
            hintStyle: TextStyle(fontSize: textSize()),
            border:
                OutlineInputBorder(borderRadius: BorderRadius.circular(10))));

    //confirm password field
    final confirmPasswordField = TextFormField(
        key: Key("confirmed password field"),
        autofocus: false,
        style: TextStyle(fontSize: textSize()),
        controller: confirmPasswordEditingController,
        obscureText: true,
        validator: (value) {
          if (confirmPasswordEditingController.text !=
...
        return Colors.redAccent;
      }
    }

    //signup button
    final signUpButton = Container(
      key: Key("sign up buttom"),
      color: colorSignUp(),
      child: MaterialButton(
          onPressed: () async {
            if (await NetworkCheck().check()) {
              signUp(
                  emailEditingController.text, passwordEditingController.text);
...
