...
                          SizedBox(height: screenHeight * 0.05),
                          ElevatedButton.icon(
                              style: ElevatedButton.styleFrom(
                                  minimumSize:
                                      Size.fromHeight(screenText * 45)),
                              icon: Icon(Icons.mail, size: screenText * 28),
                              label: Text('Resent Email',
                                  style: TextStyle(fontSize: screenText * 24)),
                              onPressed: canResendEmail
                                  ? sendVerificationEmail
                                  : null),
                          SizedBox(height: screenHeight * 0.06),
                          ElevatedButton.icon(
...
