...
                                        ))),
                                Text(' or ',
                                    style: TextStyle(
                                        fontSize: screenText * 25,
                                        fontWeight: FontWeight.bold)),
                                GestureDetector(
                                    key: Key("New Account2"),
                                    child: Text("Don't have an account?",
                                        textAlign: TextAlign.start,
                                        style: TextStyle(
                                            decoration:
                                                TextDecoration.underline,
                                            color: Colors.redAccent,
...
