...
                                ])),
                        SizedBox(height: screenHeight * 0.04),
                        Column(
                            mainAxisAlignment: MainAxisAlignment.center,
                            children: [
                              Container(
                                  key: Key("logout button tablet"),
                                  height: screenHeight * 0.07,
                                  width: screenWidth * 0.7,
                                  child: MaterialButton(
                                      color: Colors.grey.shade500,
                                      onPressed: () async {
                                        if (await NetworkCheck().check()) {
...
